// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group 1`] = `
<g
  class="silky-group undefined"
  transform="translate(0, 0)"
>
  foo
</g>
`;

exports[`Group width custom position 1`] = `
<g
  class="silky-group undefined"
  transform="translate(10, 10)"
>
  foo
</g>
`;

exports[`Group with custom class 1`] = `
<g
  class="silky-group foo"
  transform="translate(0, 0)"
>
  foo
</g>
`;
